package edu.hitsz.aircraft;

public interface EnemyAircraftFactory {
    public abstract AbstractAircraft createEnemyAricraft();
}
